cardrivers/dev_ws/log/build_2022-05-04_08-16-37/adafruit_drivers/stderr.log
  File "/home/dev_ws/install/adafruit_drivers/lib/python3.8/site-packages/include/Adafruit_I2C/Adafruit_I2C.py", line 75
    except IOError, err:
                  ^
SyntaxError: invalid syntax

  File "/home/dev_ws/install/adafruit_drivers/lib/python3.8/site-packages/include/PCA9685/PWMSteering.py", line 15
    rclpy.get_logger().info('[PWM Steering] Set speed pulse to %s', pulse))
                                                                          ^
SyntaxError: unmatched ')'

